--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </li>
 
             <li class="header-nav-links">
-                <img class="main-logo" src="Images/logo-the-lore-of-pour.png" alt="The Lore of Pour Logo">
+                <img class="main-logo" src="./Images/logo-the-lore-of-pour.png" alt="The Lore of Pour Logo">
             </li>
 
             <li class="header-nav-links">
