messy error handling

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script defer type="module" src="scriptFiles/main.js"></script>
-    <script defer type="module" src="scriptFiles/hambugerMenu.js"></script>
+    <script defer type="module" src="scriptFiles/hamburgerMenu.js"></script>
     <script defer type="module" src="scriptFiles/carousel.js"></script>
     
 
@@ -109,6 +109,7 @@
     <hr>
 
     <h1> Our Latest:</h1>
+    <p class="scroll-for-latest-paragraph">Scroll right for our six most recent:</p>
 
     <p class="home-slide-paragraph">(Slide to see our articles:)</p>
 
