--- a/sitePages/postCards.html
+++ b/sitePages/postCards.html
@@ -17,8 +17,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300;400;500;600&family=Lato:wght@100;300;400&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" type="text/css" href="/styles.css">
-    <script defer type="module" src="scriptFiles/main.js"></script>
-    <script defer type="module" src="../scriptFiles/hambugerMenu.js"></script>
+    <script defer type="module" src="../scriptFiles/main.js"></script>
+    <script defer type="module" src="../scriptFiles/hamburgerMenu.js"></script>
     <script defer type="module" src="../scriptFiles/post-detail.js"></script>
     <script defer type="module" src="../scriptFiles/postCards.js"></script>
    
