--- a/sitePages/postCards.html
+++ b/sitePages/postCards.html
@@ -127,7 +127,7 @@
 <div id="cards-container" class="cards-container"></div>
 
 
-   
+<button id="load-more-button" style="display: none;">Load More</button>
 
 
  
