--- a/sitePages/post-detail.html
+++ b/sitePages/post-detail.html
@@ -134,6 +134,12 @@
 
 
 
+    <div id="myModal" class="modal">
+
+        <div class="modal-content">
+          <img id="modalImage" src="" alt="Image view" style="width:100%">
+        </div>
+      </div>
 
 
 
