--- a/sitePages/postCards.html
+++ b/sitePages/postCards.html
@@ -127,7 +127,9 @@
 <div id="cards-container" class="cards-container"></div>
 
 
-<button id="load-more-button" style="display: none;">Load More</button>
+<button id="see-more-button" style="display: none;">See More Articles</button>
+
+<button id="see-less-button" style="display: none;">See Less</button>
 
 
  
