So many changes-- moving the loader

--- a/sitePages/post-detail.html
+++ b/sitePages/post-detail.html
@@ -20,6 +20,7 @@
 
 
     <script defer type="module" src="../scriptFiles/main.js"></script>
+    <script defer type="module" src="../scriptFiles/loader.js"></script>
     <script defer type="module" src="../scriptFiles/post-detail.js"></script>
     <script defer type="module" src="../scriptFiles/hambugerMenu.js"></script>
     <script defer type="module" src="../scriptFiles/postCards.js"></script>
