--- a/sitePages/postCards.html
+++ b/sitePages/postCards.html
@@ -18,6 +18,7 @@
     
     <link rel="stylesheet" type="text/css" href="/styles.css">
     <script defer type="module" src="../scriptFiles/main.js"></script>
+    <script defer type="module" src="../scriptFiles/loader.js"></script>
     <script defer type="module" src="../scriptFiles/hamburgerMenu.js"></script>
     <script defer type="module" src="../scriptFiles/post-detail.js"></script>
     <script defer type="module" src="../scriptFiles/postCards.js"></script>
