--- a/sitePages/contact.html
+++ b/sitePages/contact.html
@@ -20,6 +20,7 @@
 
 
     <script defer type="module" src="/scriptFiles/main.js"></script>
+    <script defer type="module" src="../scriptFiles/loader.js"></script>
     <script defer type="module" src="../scriptFiles/hamburgerMenu.js"></script>
     <script defer type="module" src="../scriptFiles/contact.js"></script>
    
