--- a/sitePages/aboutUs.html
+++ b/sitePages/aboutUs.html
@@ -20,7 +20,9 @@
     <script defer type="module" src="../scriptFiles/main.js"></script>
     <script defer type="module" src="../scriptFiles/loader.js"></script>
     <script defer type="module" src="../scriptFiles/hamburgerMenu.js"></script>
-    <script defer type="module" src="../scriptFiles/post-detail.js"></script>
+    <script defer type="module" src="../scriptFiles/"></script>
+
+
 
     <title>About Us</title>
 </head>
