small styling inconsistencies

--- a/sitePages/contact.html
+++ b/sitePages/contact.html
@@ -150,13 +150,13 @@
     <form>
         <div class="form-group">
             <label>Full Name</label>
-            <input name="name" placeholder="Your first and last name:" />
+            <input class="name" name="name" placeholder="Your first and last name:" />
             <div class="error-hint hidden">Your name is required.</div>
         </div>
 
         <div class="form-group">
             <label>Email</label>
-            <input name="email" placeholder="Your Email:" />
+            <input class="email" name="email" placeholder="Your Email:" />
             <div class="error-hint hidden">Please enter a valid email.</div>
         </div>
 
