--- a/sitePages/postCards.html
+++ b/sitePages/postCards.html
@@ -20,11 +20,20 @@
     <script defer type="module" src="../scriptFiles/main.js"></script>
     <script defer type="module" src="../scriptFiles/loader.js"></script>
     <script defer type="module" src="../scriptFiles/hamburgerMenu.js"></script>
-
     <script defer type="module" src="../scriptFiles/postCards.js"></script>
    
     
-
+<!-- Hotjar Tracking Code for The Lore of Pour -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:3869780,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 
     <title>All posts</title>
 </head>
