--- a/index.html
+++ b/index.html
@@ -49,12 +49,29 @@
 <body>
     <nav id="nav-bar-header">
         <ul class="nav-grid">
-            <li class="grid-item facebook-icon"><i class="fa-brands fa-facebook" style="color: #ffffff;"></i></li>
-            <li class="grid-item pinterest-icon"><i class="fa-brands fa-pinterest" style="color: #ffffff;"></i></li>
-            <li class="grid-item instagram-icon"><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></li>
-            <li class="grid-item twitter-icon"><i class="fa-brands fa-twitter" style="color: #ffffff;"></i></li>
-            <li class="grid-item search-icon"><i class="fa fa-search" style="color: #ffffff;"></i></li>
-            <li class="grid-item search-bar"><input type="text" placeholder="Search..."></li>
+            <li class="grid-item facebook-icon">
+                <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
+            </li>
+
+            <li class="grid-item pinterest-icon">
+                <i class="fa-brands fa-pinterest" style="color: #ffffff;"></i>
+            </li>
+
+            <li class="grid-item instagram-icon">
+                <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
+            </li>
+
+            <li class="grid-item twitter-icon">
+                <i class="fa-brands fa-twitter" style="color: #ffffff;"></i>
+            </li>
+
+            <li class="grid-item search-icon">
+                <i class="fa fa-search" style="color: #ffffff;"></i>
+            </li>
+
+            <li class="grid-item search-bar">
+                <input name="search-bar" type="text" placeholder="Search...">
+            </li>
 
 
             <li class="hambuger-icon">
