--- a/sitePages/contact.html
+++ b/sitePages/contact.html
@@ -64,7 +64,7 @@
             </li>
 
             <li class="grid-item search-bar">
-                <input type="text" placeholder="Search...">
+                <input name="search-bar" type="text" placeholder="Search...">
             </li>
 
 
@@ -162,41 +162,35 @@
 <div class="form-container">
     <form>
         <div class="form-group">
-            <label>Full Name</label>
-            <input class="name" name="name" placeholder="Your first and last name:" />
+            <label for="fullName">Full Name</label>
+            <input id="fullName" class="name" name="name" placeholder="Your first and last name:" />
             <div class="error-hint hidden">Your name is required.</div>
         </div>
 
         <div class="form-group">
-            <label>Email</label>
-            <input class="email" name="email" placeholder="Your Email:" />
+            <label for="email">Email</label>
+            <input id="email" class="email" name="email" placeholder="Your Email:" />
             <div class="error-hint hidden">Please enter a valid email.</div>
         </div>
 
-
-
         <div class="form-group">
-            <label>Subject</label>
-            <textarea class="subject-box" name="subject" placeholder="Subject:"></textarea>
+            <label for="subject">Subject</label>
+            <textarea id="subject" class="subject-box" name="subject" placeholder="Subject:"></textarea>
             <div class="error-hint hidden">Please tell us what we can help you with.</div>
         </div>
 
         <div class="form-group">
-            <label>Message</label>
-            <textarea class="message-box" name="message" placeholder="Your Message:"></textarea>
+            <label for="message">Message</label>
+            <textarea id="message" class="message-box" name="message" placeholder="Your Message:"></textarea>
             <div class="error-hint hidden">Let us know what you're thinking.</div>
         </div>
 
-
         <button class="submit-button">Send Your Message</button>
-
-
     </form>
 
     <div class="thank-you hidden">
         Thank You for Your message! We will respond as soon as we can! 
     </div>
-    
 </div>
 
 
