--- a/sitePages/post-detail.html
+++ b/sitePages/post-detail.html
@@ -65,7 +65,7 @@
             </li>
 
             <li class="grid-item search-bar">
-                <input type="text" placeholder="Search...">
+                <input name="search-bar" type="text" placeholder="Search...">
             </li>
 
 
