--- a/sitePages/postCards.html
+++ b/sitePages/postCards.html
@@ -61,7 +61,7 @@
             </li>
 
             <li class="grid-item search-bar">
-                <input type="text" placeholder="Search...">
+                <input name="search-bar" type="text" placeholder="Search...">
             </li>
 
 
