--- a/sitePages/post-detail.html
+++ b/sitePages/post-detail.html
@@ -65,9 +65,8 @@
             </li>
 
             <li class="grid-item search-bar">
-                <input name="search-bar" type="text" placeholder="Search...">
+                <input name="search-bar" type="text" placeholder="Search..." aria-label="Search">
             </li>
-
 
             <li class="hambuger-icon">
                 <button class="hamburger-menu" onclick="toggleMenu()">☰</button>
