--- a/sitePages/aboutUs.html
+++ b/sitePages/aboutUs.html
@@ -62,7 +62,7 @@
             </li>
 
             <li class="grid-item search-bar">
-                <input name="search-bar" type="text" placeholder="Search...">
+                <input name="search-bar" type="text" placeholder="Search..." aria-label="Search">
             </li>
 
 
