error in validator

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
 
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <script defer type="module" src="scriptFiles/main.js"></script>
-    <script defer type="module" src="scriptFiles/loader.js"></script>
-    <script defer type="module" src="scriptFiles/hamburgerMenu.js"></script>
-    <script defer type="module" src="scriptFiles/carousel.js"></script>
-    <script defer type="module" src="scriptFiles/errorHandling.js"></script>
+    <script type="module" src="scriptFiles/main.js"></script>
+    <script type="module" src="scriptFiles/loader.js"></script>
+    <script type="module" src="scriptFiles/hamburgerMenu.js"></script>
+    <script type="module" src="scriptFiles/carousel.js"></script>
+    <script type="module" src="scriptFiles/errorHandling.js"></script>
     
 
 
