--- a/sitePages/contact.html
+++ b/sitePages/contact.html
@@ -19,10 +19,10 @@
     <link rel="stylesheet" type="text/css" href="../styles.css">
 
 
-    <script defer type="module" src="/scriptFiles/main.js"></script>
-    <script defer type="module" src="../scriptFiles/loader.js"></script>
-    <script defer type="module" src="../scriptFiles/hamburgerMenu.js"></script>
-    <script defer type="module" src="../scriptFiles/contact.js"></script>
+    <script type="module" src="/scriptFiles/main.js"></script>
+    <script type="module" src="../scriptFiles/loader.js"></script>
+    <script type="module" src="../scriptFiles/hamburgerMenu.js"></script>
+    <script type="module" src="../scriptFiles/contact.js"></script>
    
 
 <!-- Hotjar Tracking Code for The Lore of Pour -->
@@ -43,21 +43,6 @@
 <body>
     <nav id="nav-bar-header">
         <ul class="nav-grid">
-            <li class="grid-item facebook-icon">
-                <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
-            </li>
-
-            <li class="grid-item pinterest-icon">
-                <i class="fa-brands fa-pinterest" style="color: #ffffff;"></i>
-            </li>
-
-            <li class="grid-item instagram-icon">
-                <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
-            </li>
-
-            <li class="grid-item twitter-icon">
-                <i class="fa-brands fa-twitter" style="color: #ffffff;"></i>
-            </li>
 
             <li class="grid-item search-icon">
                 <i class="fa fa-search" style="color: #ffffff;"></i>
@@ -194,6 +179,27 @@
 </div>
 
 
+
+
+<nav id="nav-bar-footer">
+    <ul class="nav-grid">
+        <li class="grid-item facebook-icon">
+            <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
+        </li>
+
+        <li class="grid-item pinterest-icon">
+            <i class="fa-brands fa-pinterest" style="color: #ffffff;"></i>
+        </li>
+
+        <li class="grid-item instagram-icon">
+            <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
+        </li>
+
+        <li class="grid-item twitter-icon">
+            <i class="fa-brands fa-twitter" style="color: #ffffff;"></i>
+        </li>
+    </ul>
+</nav>
 
 
  
