--- a/sitePages/contact.html
+++ b/sitePages/contact.html
@@ -148,13 +148,13 @@
     <form>
         <div class="form-group">
             <label for="fullName">Full Name</label>
-            <input id="fullName" class="name" name="name" placeholder="Your first and last name:" />
+            <input id="fullName" class="name" name="name" placeholder="Your first and last name:">
             <div class="error-hint hidden">Your name is required.</div>
         </div>
 
         <div class="form-group">
             <label for="email">Email</label>
-            <input id="email" class="email" name="email" placeholder="Your Email:" />
+            <input id="email" class="email" name="email" placeholder="Your Email:">
             <div class="error-hint hidden">Please enter a valid email.</div>
         </div>
 
