thanks for the potential work around, google!

--- a/sitePages/post-detail.html
+++ b/sitePages/post-detail.html
@@ -133,7 +133,7 @@
     <div id="myModal" class="modal">
 
         <div class="modal-content">
-          <img id="modalImage" src="" alt="Image view" style="width:100%">
+          <img id="modalImage" src="#" alt="Image view" style="width:100%">
         </div>
       </div>
 
