--- a/sitePages/post-detail.html
+++ b/sitePages/post-detail.html
@@ -26,18 +26,17 @@
     <script type="module" src="../scriptFiles/hamburgerMenu.js"></script>
   
     
-<!-- Hotjar Tracking Code for The Lore of Pour -->
-<script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:3869780,hjsv:6};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
-
+    <!-- Hotjar Tracking Code for The Lore of Pour -->
+    <script>
+        (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:3869780,hjsv:6};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
 
     <title>Post Details</title>
 </head>
@@ -118,7 +117,7 @@
 
 
 
-    <div>
+    <div class="post-detail-container">
         <div id="postTitle" class="postTitle"></div>
         <div id="postImages"></div>
         <div class="postContent">
