--- a/index.html
+++ b/index.html
@@ -95,9 +95,11 @@
 
 
 
-    <h1>Our Latest:</h1>
-    <p class="scroll-for-latest-paragraph">Scroll right for our six most recent:</p>
-    <p class="home-slide-paragraph">(Slide to see our articles:)</p>
+    <h1 class="opening-header">The Lore of pour</h1>
+    <p class="you-and-brew">Where we discuss the relationship between you, and your brew! <i class="fa-solid fa-mug-hot" style="color: #161412;"></i></p>
+    <p class="scroll-for-latest-paragraph">Our six most recent:</p>
+    <p class="home-slide-paragraph">
+        <i class="fa-solid fa-chevron-left"></i> Our six most recent: <i class="fa-solid fa-chevron-right"></i></p>
 
 
 
