--- a/sitePages/contact.html
+++ b/sitePages/contact.html
@@ -102,7 +102,7 @@
 
     <hr>
 
-    <h1>Contact:</h1>
+    <h1>Contact Us:</h1>
 
 
 
@@ -122,6 +122,11 @@
 
     <img class="contact-us-image" src="../Images/contact.jpg" alt="Teacup with a notebook beside it.">
 
+
+
+    <p class="contact-us-paragraph">
+       We love hearing from you, so why not send us a letter?
+    </p>
 
 
 <p class="contact-us-paragraph">
