moving bits about

--- a/index.html
+++ b/index.html
@@ -78,9 +78,22 @@
 
     <nav id="logo-nav-bar">
         <ul class="logo-bar-grid">
-            <li class="header-nav-links"><a href="Index.html">Home</a></li>
-            <li class="header-nav-links"><a href="./sitePages/aboutUs.html">About</a></li>
-            <li class="header-nav-links"><img class="main-logo" src="./Images/logo-the-lore-of-pour.png" alt="The Lore of Pour Logo"></li>
+
+            <li class="header-nav-links">
+                <a href="Index.html">Home</a>
+            </li>
+
+            <li class="header-nav-links">
+                <a href="./sitePages/aboutUs.html">About</a>
+            </li>
+
+            <li class="header-nav-link-logo">
+                <a href="index.html">
+                    <img class="main-logo" src="./Images/logo-the-lore-of-pour.png" alt="The Lore of Pour Logo">
+                </a>
+            </li>
+
+
             <li class="header-nav-links"><a href="./sitePages/postCards.html">Posts</a></li>
             <li class="header-nav-links"><a href="./sitePages/contact.html">Contact</a></li>
         </ul>
