--- a/sitePages/post-detail.html
+++ b/sitePages/post-detail.html
@@ -82,8 +82,10 @@
                 <a href="aboutUs.html">About</a>
             </li>
 
-            <li class="header-nav-links">
-                <img class="main-logo" src="../Images/logo-the-lore-of-pour.png" alt="The Lore of Pour Logo">
+            <li class="header-nav-link-logo">
+                <a href="/index.html">
+                    <img class="main-logo" src="../Images/logo-the-lore-of-pour.png" alt="The Lore of Pour Logo">
+                </a>
             </li>
 
             <li class="header-nav-links">
