could not get stuff to work yet- no worries! Next time! xxx

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script type="module" src="scriptFiles/loader.js"></script>
     <script type="module" src="scriptFiles/hamburgerMenu.js"></script>
     <script type="module" src="scriptFiles/carousel.js"></script>
+    <script type="module" src="scriptFiles/product.js"></script>
     <script type="module" src="scriptFiles/errorHandling.js"></script>
     
 
@@ -140,6 +141,20 @@
 
 
     <hr class="main-hr">
+
+
+<p class="products-mug-grab-header">Want to join in the tea experience? <br/> Why not grab a mug from us?</p>
+
+
+
+    <div id="product-thumbnail-container">
+
+        <div id="thumbnail-image"></div>
+
+
+    </div>
+
+
 
 
 
