--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <hr class="main-hr">
 
 
-<p class="products-mug-grab-header">Want to join in the tea experience? <br/> Why not grab a mug from us?</p>
+<p class="products-mug-grab-header">Want to join in the tea experience? <br> Why not grab a mug from us?</p>
 
 
 
